fix email example

--- a/javalin5/javalin-heroku-example/pom.xml
+++ b/javalin5/javalin-heroku-example/pom.xml
@@ -49,7 +49,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>Main</mainClass>
+                            <mainClass>JavalinEmailExampleApp</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
