--- a/javalin5/javalinstagram/.gitignore
+++ b/javalin5/javalinstagram/.gitignore
@@ -2,7 +2,7 @@
 *.iml
 target/
 javalinstagram.db
-user-uploads/static/p
+user-uploads/static/p/*
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
