--- a/javalin5/javalinstagram/pom.xml
+++ b/javalin5/javalinstagram/pom.xml
@@ -12,8 +12,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kotlin.version>1.5.0</kotlin.version>
-        <junit.version>4.12</junit.version>
+        <kotlin.version>1.7.0</kotlin.version>
         <kotlin.compiler.jvmTarget>11</kotlin.compiler.jvmTarget>
     </properties>
 
@@ -21,13 +20,7 @@
         <dependency>
             <groupId>io.javalin</groupId>
             <artifactId>javalin-bundle</artifactId>
-            <version>4.6.4</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>io.javalin</groupId>
-                    <artifactId>javalin-openapi</artifactId>
-                </exclusion>
-            </exclusions>
+            <version>5.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.nixxcode.jvmbrotli</groupId>
@@ -42,7 +35,7 @@
         <dependency>
             <groupId>net.coobird</groupId>
             <artifactId>thumbnailator</artifactId>
-            <version>0.4.8</version>
+            <version>0.4.17</version>
         </dependency>
         <dependency>
             <groupId>org.mindrot</groupId>
@@ -52,7 +45,7 @@
         <dependency>
             <groupId>org.jdbi</groupId>
             <artifactId>jdbi3-core</artifactId>
-            <version>3.12.0</version>
+            <version>3.30.0</version>
         </dependency>
         <!-- WEBJARS -->
         <dependency>
@@ -63,17 +56,17 @@
         <dependency>
             <groupId>org.webjars.npm</groupId>
             <artifactId>vuetify</artifactId>
-            <version>1.5.16</version>
+            <version>2.6.7</version>
         </dependency>
         <dependency>
             <groupId>org.webjars.npm</groupId>
             <artifactId>axios</artifactId>
-            <version>0.19.0</version>
+            <version>0.27.2</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>momentjs</artifactId>
-            <version>2.24.0</version>
+            <version>2.29.3</version>
         </dependency>
     </dependencies>
 
@@ -116,12 +109,20 @@
                             </descriptorRefs>
                             <archive>
                                 <manifest>
-                                    <mainClass>javalinstagram.MainKt</mainClass>
+                                    <mainClass>javalinstagram.JavalinstagramAppKt</mainClass>
                                 </manifest>
                             </archive>
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
