--- a/javalin5/javalin-async-example/pom.xml
+++ b/javalin5/javalin-async-example/pom.xml
@@ -10,32 +10,36 @@
 
     <name>io.javalin javalin-async-example</name>
 
+    <repositories>
+        <repository>
+            <id>reposilite-repository-snapshots</id>
+            <name>Reposilite Repository</name>
+            <url>https://maven.reposilite.com/snapshots</url>
+        </repository>
+        <repository>
+            <id>zugazagoitia-repo-snapshots</id>
+            <name>Zugazagoitia Repository</name>
+            <url>https://repo.zugazagoitia.com/snapshots</url>
+        </repository>
+    </repositories>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kotlin.version>1.3.21</kotlin.version>
-        <junit.version>4.12</junit.version>
+        <kotlin.version>1.7.10</kotlin.version>
+        <kotlin.code.style>official</kotlin.code.style>
+        <kotlin.compiler.jvmTarget>11</kotlin.compiler.jvmTarget>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>io.javalin</groupId>
             <artifactId>javalin-bundle</artifactId>
-            <version>4.0.0</version>
+            <version>5.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.7.30</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty.alpn</groupId>
-            <artifactId>alpn-api</artifactId>
-            <version>1.1.3.v20160715</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mortbay.jetty.alpn</groupId>
-            <artifactId>alpn-boot</artifactId>
-            <version>8.1.12.v20180117</version>
+            <groupId>io.javalin</groupId>
+            <artifactId>javalin-ssl</artifactId>
+            <version>5.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
