--- a/javalin5/javalin-auth-example/pom.xml
+++ b/javalin5/javalin-auth-example/pom.xml
@@ -3,7 +3,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>io.javalin</groupId>
     <artifactId>javalin-auth-example</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
