Check for existance of mvnw
This should stop the failing tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
       - name: Make Maven Wrapper executable
-        if: contains(matrix.os, 'win') == false
+        if: contains(matrix.os, 'win') == false && hashFiles('mvnw') != ''
         run: chmod +x ./mvnw
       - name: Build with Maven
         if: hashFiles('pom.xml') != ''
