--- a/javalin5/javalin-auth-example/pom.xml
+++ b/javalin5/javalin-auth-example/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>io.javalin</groupId>
             <artifactId>javalin-bundle</artifactId>
-            <version>5.0.0.RC0</version>
+            <version>5.0.0</version>
         </dependency>
     </dependencies>
 
