--- a/javalin4/javalin-email-example/pom.xml
+++ b/javalin4/javalin-email-example/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.javalin</groupId>
-    <artifactId>javalin-email-example</artifactId>
+    <artifactId>javalin4-email-example</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
