--- a/javalin4/javalin-heroku-example/pom.xml
+++ b/javalin4/javalin-heroku-example/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.javalin</groupId>
-    <artifactId>javalin-heroku-example</artifactId>
+    <artifactId>javalin4-heroku-example</artifactId>
     <version>1.0</version>
 
     <dependencies>
