--- a/javalin4/javalinstagram/pom.xml
+++ b/javalin4/javalinstagram/pom.xml
@@ -3,7 +3,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.javalin</groupId>
+    <groupId>io.javalin.samples.javalin4</groupId>
     <artifactId>javalinstagram</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
