--- a/javalin4/javalinvue-example/javalinvue3-example/pom.xml
+++ b/javalin4/javalinvue-example/javalinvue3-example/pom.xml
@@ -3,12 +3,12 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.javalin</groupId>
-    <artifactId>javalinvue-example</artifactId>
+    <groupId>io.javalin.samples.javalin4</groupId>
+    <artifactId>javalinvue3-example</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>io.javalin javalinvue-example</name>
+    <name>io.javalin.samples.javalin4 javalinvue3-example</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
