--- a/javalin5/pom.xml
+++ b/javalin5/pom.xml
@@ -8,14 +8,14 @@
     <packaging>pom</packaging>
 
     <modules>
-        <!--<module>javalin-async-example</module>-->
+        <module>javalin-async-example</module>
         <module>javalin-auth-example</module>
         <!--<module>javalin-cors-example</module>-->
         <module>javalin-email-example</module>
         <module>javalin-heroku-example</module>
         <!--<module>javalin-html-forms-example</module>-->
         <!-- javalin-ssl-plugin is not yet on maven central -->
-        <!--<module>javalin-http2-example</module>-->
+        <module>javalin-http2-example</module>
         <module>javalin-jetty-sessions-example</module>
         <module>javalin-kotlin-example</module>
         <!--<module>javalin-modern-java-example</module>-->
