--- a/javalin4/javalin-async-example/pom.xml
+++ b/javalin4/javalin-async-example/pom.xml
@@ -3,12 +3,12 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.javalin</groupId>
+    <groupId>io.javalin.samples.javalin4</groupId>
     <artifactId>javalin-async-example</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>io.javalin javalin-async-example</name>
+    <name>io.javalin.samples.javalin4 javalin-async-example</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
