--- a/javalin4/javalin-heroku-example/pom.xml
+++ b/javalin4/javalin-heroku-example/pom.xml
@@ -4,9 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.javalin</groupId>
-    <artifactId>javalin4-heroku-example</artifactId>
+    <groupId>io.javalin.samples.javalin4</groupId>
+    <artifactId>javalin-heroku-example</artifactId>
     <version>1.0</version>
+
+    <name>Javalin 4 ${artifactId}</name>
 
     <dependencies>
         <dependency>
