--- a/javalin4/javalin-vuejs-example/pom.xml
+++ b/javalin4/javalin-vuejs-example/pom.xml
@@ -3,12 +3,12 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.javalin</groupId>
-    <artifactId>javalin4-vuejs-example</artifactId>
+    <groupId>io.javalin.samples.javalin4</groupId>
+    <artifactId>javalin-vuejs-example</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
-    <name>io.javalin javalin-vuejs-example</name>
+    <name>Javalin 4 ${artifactId}</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
