--- a/javalin4/javalinstagram/pom.xml
+++ b/javalin4/javalinstagram/pom.xml
@@ -8,7 +8,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>javalinstagram</name>
+    <name>Javalin 4 ${artifactId}</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
