--- a/javalin4/javalinvue-example/javalinvue3-example/pom.xml
+++ b/javalin4/javalinvue-example/javalinvue3-example/pom.xml
@@ -8,7 +8,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>io.javalin.samples.javalin4 javalinvue3-example</name>
+    <name>Javalin 4 ${artifactId}</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
