--- a/javalin4/pom.xml
+++ b/javalin4/pom.xml
@@ -7,6 +7,8 @@
     <version>1.0.0</version>
     <packaging>pom</packaging>
 
+    <name>Javalin 4 samples</name>
+
     <modules>
         <module>javalin-async-example</module>
         <!--<module>javalin-cors-example</module> checked-->
