--- a/javalin5/pom.xml
+++ b/javalin5/pom.xml
@@ -7,6 +7,8 @@
     <version>1.0.0</version>
     <packaging>pom</packaging>
 
+    <name>Javalin 5 samples</name>
+
     <modules>
         <module>javalin-async-example</module>
         <module>javalin-auth-example</module>
