--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.javalin.samples</groupId>
-    <artifactId>javalin-samples-parent</artifactId>
+    <artifactId>javalin-samples-aggregator</artifactId>
     <version>1.0.0</version>
     <packaging>pom</packaging>
+
+    <name>Javalin samples</name>
 
     <modules>
         <module>javalin4</module>
