Fix Javalin 5 html-forms-example

--- a/javalin5/pom.xml
+++ b/javalin5/pom.xml
@@ -15,7 +15,7 @@
         <module>javalin-cors-example</module>
         <module>javalin-email-example</module>
         <module>javalin-heroku-example</module>
-        <!--<module>javalin-html-forms-example</module>-->
+        <module>javalin-html-forms-example</module>
         <module>javalin-http2-example</module>
         <module>javalin-jetty-sessions-example</module>
         <module>javalin-kotlin-example</module>
