--- a/javalin4/javalin-heroku-example/pom.xml
+++ b/javalin4/javalin-heroku-example/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>javalin-heroku-example</artifactId>
     <version>1.0</version>
 
-    <name>Javalin 4 ${artifactId}</name>
+    <name>Javalin 4 ${project.artifactId}</name>
 
     <dependencies>
         <dependency>
