--- a/javalin4/javalin-kotlin-example/pom.xml
+++ b/javalin4/javalin-kotlin-example/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>javalin-kotlin-example</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>Javalin 4 ${artifactId}</name>
+    <name>Javalin 4 ${project.artifactId}</name>
 
     <properties>
         <kotlin.version>1.5.20</kotlin.version>
