--- a/javalin5/javalin-html-forms-example/pom.xml
+++ b/javalin5/javalin-html-forms-example/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>javalin-html-forms-example</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>Javalin 5 ${artifactId}</name>
+    <name>Javalin 5 ${project.artifactId}</name>
 
     <dependencies>
         <dependency>
