--- a/javalin5/javalin-kotlin-example/pom.xml
+++ b/javalin5/javalin-kotlin-example/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>javalin-kotlin-example</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>Javalin 5 ${artifactId}</name>
+    <name>Javalin 5 ${project.artifactId}</name>
 
     <properties>
         <kotlin.version>1.7.0</kotlin.version>
