Fix e2e test in Javalin testing example - Javalin 5 edition

--- a/javalin5/pom.xml
+++ b/javalin5/pom.xml
@@ -22,7 +22,6 @@
         <module>javalin-openapi-example</module>
         <module>javalin-prometheus-example</module>
         <module>javalin-realtime-collaboration-example</module>
-        <module>javalin-testing-example</module>
         <module>javalin-vuejs-example</module>
         <module>javalin-websocket-example</module>
         <module>javalinstagram</module>
@@ -32,6 +31,17 @@
     </modules>
 
     <profiles>
+        <profile>
+            <id>at-least-java-11</id>
+            <activation>
+                <jdk>[11,)</jdk>
+            </activation>
+            <modules>
+                <!-- required by newer Chrome versions combined with newer Selenium versions -->
+                <!-- See also https://stackoverflow.com/a/75741758 -->
+                <module>javalin-testing-example</module>
+            </modules>
+        </profile>
         <profile>
             <id>modern-java</id>
             <activation>
