Add HTTP/2 and Async examples

--- a/javalin6/pom.xml
+++ b/javalin6/pom.xml
@@ -10,13 +10,13 @@
     <name>Javalin 6 samples</name>
 
     <modules>
-<!--        <module>javalin-async-example</module>--> <!-- TODO: ADD -->
+        <module>javalin-async-example</module>
         <module>javalin-auth-example</module>
         <module>javalin-cors-example</module>
         <module>javalin-email-example</module>
         <module>javalin-heroku-example</module>
         <module>javalin-html-forms-example</module>
-<!--        <module>javalin-http2-example</module>--> <!-- TODO: ADD -->
+        <module>javalin-http2-example</module>
         <module>javalin-jetty-sessions-example</module>
         <module>javalin-kotlin-example</module>
 <!--        <module>javalin-openapi-example</module>--> <!-- TODO: ADD -->
