--- a/javalin6/pom.xml
+++ b/javalin6/pom.xml
@@ -29,6 +29,18 @@
         <module>javalinvue-example/javalinvue2-example</module>
         <module>javalinvue-example/javalinvue3-example</module>
     </modules>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>16</source>
+                    <target>16</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <profiles>
         <profile>
