--- a/javalin6/javalin-email-example/pom.xml
+++ b/javalin6/javalin-email-example/pom.xml
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>io.javalin</groupId>
             <artifactId>javalin-bundle</artifactId>
-            <version>6.0.0-beta.4</version>
+            <version>6.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.j2html</groupId>
