--- a/javalin6/javalin-http2-example/pom.xml
+++ b/javalin6/javalin-http2-example/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>io.javalin</groupId>
             <artifactId>javalin-bundle</artifactId>
-            <version>6.0.0-beta.4</version>
+            <version>6.0.0</version>
         </dependency>
         <dependency>
             <groupId>io.javalin.community.ssl</groupId>
