--- a/javalin6/javalin-modern-java-example/pom.xml
+++ b/javalin6/javalin-modern-java-example/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>io.javalin</groupId>
             <artifactId>javalin-bundle</artifactId>
-            <version>6.0.0-beta.4</version>
+            <version>6.0.0</version>
         </dependency>
     </dependencies>
 
