--- a/javalin6/javalin-openapi-example/pom.xml
+++ b/javalin6/javalin-openapi-example/pom.xml
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>io.javalin</groupId>
             <artifactId>javalin-bundle</artifactId>
-            <version>6.0.0-beta.4</version>
+            <version>6.0.0</version>
         </dependency>
         <!-- OpenApi plugin -->
         <dependency>
