--- a/javalin6/javalin-prometheus-example/pom.xml
+++ b/javalin6/javalin-prometheus-example/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>io.javalin</groupId>
             <artifactId>javalin-bundle</artifactId>
-            <version>6.0.0-beta.4</version>
+            <version>6.0.0</version>
         </dependency>
         <dependency>
             <groupId>io.prometheus</groupId>
