--- a/javalin6/javalinstagram/pom.xml
+++ b/javalin6/javalinstagram/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>io.javalin</groupId>
             <artifactId>javalin-bundle</artifactId>
-            <version>6.0.0-beta.4</version>
+            <version>6.0.0</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
